# ks-mcp

./: .gitignore  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  server.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-ksapi.yml  ci.yml  release.yml
src/ks_mcp/: __init__.py  client.py  errors.py  schema.py  server.py
src/ks_mcp/tools/: __init__.py  ask.py  browse.py  cite.py  org.py  provenance.py  read.py  search.py
tests/: conftest.py  test_ask.py  test_cite.py  test_client.py  test_errors.py  test_read.py  test_schema.py  test_search.py  test_server.py
wiki/: Architecture.md  Client-Setup.md  Configuration.md  Cookbook-Recipes.md  Development.md  Diagnostics.md  Home.md  README.md  Security.md  Tools.md  Transports.md
